--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -2,25 +2,45 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body{
-    font-family: ;
-}
-
-h1,
-p {
-    text-align: center;
-    margin: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    line-height: 1.5;
 }
 
 header{
-    background-color: rgb(252, 172, 225);
-    color: rgb(221, 43, 182);
+    background-color:  rgb(243, 185, 219);
+    color: rgb(0, 0, 0);
     padding: 40px;
+    text-align: center;
+    
 }
 
 main{
-    height: 600px;
+    flex: 1;
     background-color: rgb(250, 226, 241);
+    padding: 48px 38px;
+}
+
+#sobre-mim {
+    display: block;
+    background-color: rgb(243, 185, 219);
+    width: 80%;
+    margin: 0 auto;
+    padding: 40px;
+    border-radius: 14px;
+}
+#titulo-sobre-mim {
+    font-size: 20px;
+    margin-bottom: 16px;
+    border-bottom: 2px solid black;
+    margin-bottom: 20px;
+}
+.texto-sobre-mim{
+    font-size: 18px;
 }
