--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -10,7 +10,7 @@ body{
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    line-height: 1.5;
+    line-height: 1.5";
 }
 
 header{
