--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -34,6 +34,7 @@ main{
     margin: 0 auto;
     padding: 40px;
     border-radius: 14px;
+    margin-bottom: 40px;
 }
 #titulo-sobre-mim {
     font-size: 20px;
@@ -43,4 +44,36 @@ main{
 }
 .texto-sobre-mim{
     font-size: 18px;
+}
+#meus-hoobbies {
+    background-color: rgb(243, 185, 219);
+    width: 80%;
+    margin: 0 auto;
+    padding: 30px;
+    border-radius: 14px;
+    margin-bottom: 16px;
+}
+#titulo-meus-hoobbies {
+    font-size: 20px;
+    margin-bottom: 25px;
+}
+ul{
+    list-style: none;
+    padding: 0;
+    display: flex;
+    gap: 16px;
+}
+li{
+    background-color:rgb(230, 143, 193);
+    padding: 8px;
+    border-left: 4px solid black;
+    border-radius: 12px;
+    font-size: 16px;
+    min-width: 250px;
+}
+li:hover{
+    background-color: 
+    rgb(247, 162, 214);
+    transform:translateX(5px);
+    transition: all0.3s ease;
 }
