--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap');
+
 /* RESET DO CSS*/
 *{
     margin: 0;
@@ -6,7 +8,7 @@
 }
 
 body{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Lora, Arial, Helvetica, sans-serif;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -43,7 +45,7 @@ main{
     margin-bottom: 20px;
 }
 .texto-sobre-mim{
-    font-size: 18px;
+    font-size: 16px;
 }
 #meus-hoobbies {
     background-color: rgb(243, 185, 219);
@@ -51,7 +53,7 @@ main{
     margin: 0 auto;
     padding: 30px;
     border-radius: 14px;
-    margin-bottom: 16px;
+    margin-bottom: 40px;
 }
 #titulo-meus-hoobbies {
     font-size: 20px;
@@ -71,9 +73,48 @@ li{
     font-size: 16px;
     min-width: 250px;
 }
+
 li:hover{
     background-color: 
     rgb(247, 162, 214);
     transform:translateX(5px);
     transition: all0.3s ease;
+}
+
+#contato {
+    background-color:  rgb(243, 185, 219);
+    width: 80%;
+    margin: 0 auto;
+    padding: 40px;
+    border-radius: 15px;
+    margin-bottom: 40px;
+}
+
+#contato h3 {
+    margin-bottom: 8px;
+    font-size: 20px;
+    text-align: center;
+}
+
+#contato p {
+font-size: 16px;
+text-align: center;
+}
+
+#contato a {
+    color: rgb(236, 124, 188);
+    text-decoration: "none";
+    font-weight: bold;
+    padding: 0.5rem 1rem;
+    margin: 0 0.5rem;
+    border: 2px solid rgb(236, 124, 188);
+    border-radius: 20px;
+    display: inline-block;
+    transition: all 0.3 ease;
+}
+#contato a:hover{
+    background-color: black;
+    color: rgb(236, 124, 188);
+    transform: translateY(-2px)
+
 }
