--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -116,5 +116,14 @@ text-align: center;
     background-color: black;
     color: rgb(236, 124, 188);
     transform: translateY(-2px)
-
+}
+footer{
+    background-color:  rgb(243, 185, 219);
+    color: black;
+    text-align: center;
+    padding: 1.2rem;
+    width: 100%;
+}
+footer p {
+    font-size: 1rem;
 }
